$NetBSD: CHANGES,v 1.4336 2004/01/03 23:23:03 tron Exp $

Changes to the packages collection and infrastructure in 2004:

	Updated hatari to 0.45 [cjep 2004-01-01]
	Added NeoPop-SDL-0.1 [wiz 2004-01-01]
	Added dccserver-0.4 [wiz 2004-01-01]
	Updated vsftpd to 1.2.1 [salo 2004-01-01]
	Updated TeXmacs to 1.0.2.11 [recht 2004-01-01]
	Updated p5-DBD-XBase to 0.241 [salo 2004-01-01]
	Updated pclock to 0.13.1nb1 [salo 2004-01-01]
	Updated gap to 4.3.5 [cjep 2004-01-01]
	Updated moz-mplayer to 1.0 [salo 2004-01-01]
	Added awhois-1.61 [cjep 2004-01-01]
	Updated xfstt to 1.6 [salo 2004-01-01]
	Added sylpheed-claws-dillo-viewer-0.9.7 [cube 2004-01-01]
	Added sylpheed-claws-image-viewer-0.9.7 [cube 2004-01-01]
	Added sylpheed-claws-trayicon-0.9.7 [cube 2004-01-01]
	Updated audit-packages to 1.28 [agc 2004-01-01]
	Updated nicotine to 1.0.6 [hubertf 2004-01-02]
	Added edict-2003.005 [wiz 2004-01-02]
	Added kanjidic-20030901 [wiz 2004-01-02]
	Updated xjdic to 2.4 [wiz 2004-01-02]
	Added sylpheed-claws-ghostscript-viewer-0.6 [cube 2004-01-02]
	Updated cue to 20031201 [itojun 2004-01-02]
	Updated ftpproxy to 1.2.2 [taca 2004-01-02]
	Updated sun-jdk13 to 1.0.10 [jschauma 2004-01-02]
	Updated sun-jre13 to 1.0.10 [jschauma 2004-01-02]
	Updated qcad to 1.5.4nb3 [reinoud 2004-01-02]
	Added fp-netbsd-ws-4.3.1 [ben 2004-01-02]
	Updated adobe-cmaps to 20030924 [cjep 2004-01-02]
	Updated pkg_comp to 1.13 [jmmv 2004-01-03]
	Updated kdelibs to 3.1.4nb3 [jmmv 2004-01-03]
	Updated kopete to 0.7.4 [jmmv 2004-01-03]
	Updated cvs to 1.11.11 [wiz 2004-01-03]
	Updated silc-server to 0.9.16 [salo 2004-01-03]
	Updated tiff to 3.6.1 [reed 2004-01-3]
	Added oidentd-2.0.7 [tron 2004-01-03]